--- a/NavBar/Index.html
+++ b/NavBar/Index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grass company </title>
+    <link rel="stylesheet" href="Styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    Hola! mundo estoy empezando 
+    <main>
+        <header>
+            <img class="logo" src="img/Logo.png" alt="logo">
+            <nav>
+                <ul class="NavLinks">
+                    <li><a href="#"></a>Home</li>
+                    <li><a href="#"></a>Products</li>
+                    <li><a href="#"></a>Clients</li>
+                    <li><a href="#"></a>About us</li>
+                </ul>
+            </nav>
+            <a class="Contact" href="#"><button>Contact</button></a>
+
+        </header>
+
+    </main>
 </body>
+
 </html>
